--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.googlecode.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>${jmockit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.bah.jmockit.com.googlecode.jmockit</groupId>
+      <artifactId>jmockit-coverage</artifactId>
+      <version>${jmockit.coverage.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>2.0</version>
@@ -52,11 +63,6 @@
       <artifactId>maven-plugin-annotations</artifactId>
       <version>3.2</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.googlecode.jmockit</groupId>
-      <artifactId>jmockit-coverage</artifactId>
-      <version>${jmockit.coverage.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
