--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>com.bah.jmockit</groupId>
   <artifactId>merge-jmockit-maven-plugin</artifactId>
-  <version>0.999.25.1</version>
+  <version>0.999.25.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Merge Jmockit Maven Plugin</name>
